handle all fill cases correctly, fdo#86754

That special case only works if the whole source range contains formula
cells. For now we just limit it to the special case of a single source
cell.

Change-Id: I71ccfde06edd97e5a9c78da22053583d05aac411
Reviewed-on: https://gerrit.libreoffice.org/13344
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>