sc/source/core/data/table4.cxx
@@ -1297,7 +1297,7 @@ void ScTable::FillAutoSimple(
                 if (bVertical)      // rInner&:=nRow, rOuter&:=nCol
                 {
                     aSrcCell = aCol[rCol].GetCellValue(nSource);
-                    if (aSrcCell.meType == CELLTYPE_FORMULA)
+                    if (nISrcStart == nISrcEnd && aSrcCell.meType == CELLTYPE_FORMULA)
                     {
                         FillFormulaVertical(*aSrcCell.mpFormula, rInner, rCol, nIStart, nIEnd, pProgress, rProgress);
                         return;
